--- a/templates/base.html
+++ b/templates/base.html
@@ -67,9 +67,10 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                      <li><a href="/">Home</a></li>
-                     <li><a href="/products/">Products</a> </li>
+                     <li><a href={%  url 'products' %}>Products</a> </li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="/blog/">Blog</a></li>
+                    <li><a href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
                     {% if user.is_authenticated %}
                     <li><a href="{% url 'profile' %}">Profile</a></li>
                      <li><a href="{% url 'logout' %}">Log Out</a></li>
