--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 
     <style>
        body{
-            background-image: url("/static/images/frontPage2.png"); }
+            background-image: url("/static/images/front.png"); }
     </style>
 
     <!-- Bootstrap Core JavaScript -->
@@ -59,7 +59,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="#">
-                    <img src="/static/images/logo.jpg" style="display: inline-block;">
+{#                    <img src="/static/images/sweetielogo.png" style="display: inline-block;">#}
 
                     </a>
             </div>
