--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,9 @@
 
     <div class="jumbotron">
         <div class="container width ">
-            <h1>Chocolat Blanc Insights</h1>
-            <img src="/static/images/logo.jpg">
+            <h1>Chocolat Blanc</h1>
+            <h2>Number ONe chocolate shop and supplier</h2>
+{#            <img src="/static/images/logo.jpg">#}
             <p></p>
         </div>
     </div>
