--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -23,12 +23,13 @@
                             <div class="col-md-4">
                                 <div class="thumbnail">
                                     <div class="caption">
-                                        <p><<img height="100" width="100" src="/media/{{ product.image }}"></p>
+                                        <p><<img class="stop" height="150" width="150"  src="/media/{{ product.image }}"></p>
                                         <h4 class="pull-right">${{ product.price }}</h4>
                                         <a href="#">{{ product.name }}</a>
                                         <p>{{ product.description }}</p>
                                         <a> {{ product.paypal_form.sandbox }}</a>
-                                        <a href="{% url 'add_to_cart' product.id %}">Add To Cart</a>
+                                        <a  href="{% url 'add_to_cart' product.id %}">Add To Cart</a>
+
 
 
                                     </div>
