--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
                 <ul class="nav navbar-nav">
                      <li><a href="/">Home</a></li>
                      <li><a href={%  url 'products' %}>Products</a> </li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href={%  url 'contacts' %}>Contact</a></li>
                     <li><a href="/blog/">Blog</a></li>
                     <li><a href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
                     {% if user.is_authenticated %}
