updated blogs posts

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
     article {
 
         float:left;
-        max-width: 300px;
+        max-width: 500px;
         margin: 0 auto;
         padding: 1em;
     }
@@ -16,7 +16,7 @@
     aside {
 
         float:right;
-        max-width: 300px;
+        max-width: 500px;
         margin: 0 auto;
         padding: 1em;
     }
@@ -25,7 +25,9 @@
 
      <div class="container-fluid">
 
-      <p>My family and I visited The Epcot center this summer.</p>
+
+
+
 
         <article>
                 <h1> The Joanne</h1>
@@ -44,7 +46,7 @@
 
 
             <figure class="effect-julia">
-                <img src="/static/images/tablet.jpg" alt="img21"/>
+                <img src="/static/images/boxofchocos.jpg" alt="img21"/>
                 <figcaption>
                     <h2>Handcraft Chocolates <span></span></h2>
                     <div>
@@ -57,7 +59,7 @@
                 </figcaption>
             </figure>
             <figure class="effect-julia">
-                <img src="/static/images/display.jpg" alt="img21"/>
+                <img src="/static/images/tiers2.jpg" alt="img21"/>
                 <figcaption>
                     <h2>Events Chocolates Displays <span></span></h2>
                     <div>
@@ -70,7 +72,7 @@
             </figure>
 
             <figure class="effect-julia">
-                <img src="/static/images/blogpic.jpg">
+                <img src="/static/images/chocolat2.jpg">
                 <figcaption>
                     <h2>Chocolate Recipes<span></span></h2>
                     <div>
