--- a/blog/templates/blogposts.html
+++ b/blog/templates/blogposts.html
@@ -7,8 +7,8 @@
 
     <div class="jumbotron">
         <div class="container">
-            <h1>Chocolat Blanc Insights</h1>
-            <img src="{% static 'images/logo.jpg' %}">
+            <h1>Chocolat Blanc Receipts </h1>
+{#            <img src="{% static 'images/logo.jpg' %}">#}
             <p></p>
         </div>
     </div>
@@ -30,7 +30,7 @@
                 <div class="row">
                     <div class="col-xs-9">
                         {% if post.image %}
-                            <img src="/media/{{ post.image }}" style="width: 500px;height:500px;border-color:#CFE5ED; ">
+                            <img src="/media/{{ post.image }}" style="width: 250px;height:250px;border-color:#CFE5ED; ">
                         {% endif %}
                         <p>{{ post.content | linebreaks  }}</p>
                         <p>
