--- a/templates/contact.html
+++ b/templates/contact.html
@@ -5,42 +5,51 @@
 
     <style>
 
-    article {
-
-        float:left;
-        max-width: 500px;
-        margin: 0 auto;
-        padding: 1em;
-    }
-
-    aside {
+    #now {
 
         float:right;
         max-width: 500px;
         margin: 0 auto;
-        padding: 1em;
+
     }
+    #now1 {
+
+        float:left;
+        max-width: 500px;
+        margin: 0 auto;
+        padding-left: 65px;
+    }
+
+
     </style>
 
 
      <div class="container-fluid">
 
 
+     <header>
+
+
+     </header>
 
 
 
-        <article>
-                <h1> The Joanne</h1>
-                <p> My family and I visited </p>
-        </article>
+        <div class="container col-md-12"></div>
+         <div class="col-md-6" id="now">
+                <h4></h4>
+                <p>The Epcot Center is a theme park in Disney World, Florida.</p>
+            </div>
 
 
-        <aside>
+
+
+            <div class="col-md-6" id="now1">
                 <h4>Epcot Center</h4>
                 <p>The Epcot Center is a theme park in Disney World, Florida.</p>
-        </aside>
+            </div>
+            </div>
 
-     <p> good morning </p>
+
 
  <div class="grid">
 
