--- a/templates/contact.html
+++ b/templates/contact.html
@@ -36,16 +36,22 @@
 
         <div class="container col-md-12"></div>
          <div class="col-md-6" id="now">
-                <h4></h4>
-                <p>The Epcot Center is a theme park in Disney World, Florida.</p>
+                <h3>Find us</h3>
+                <p>18 Haddow Street
+                    Hamilton, South Lanarkshire.</p>
+                <h4>Call us</h4>
+                <p>+44 7901 598964</p>
+                <p>email @chocolatblancltd</p>
             </div>
 
 
 
 
             <div class="col-md-6" id="now1">
-                <h4>Epcot Center</h4>
-                <p>The Epcot Center is a theme park in Disney World, Florida.</p>
+                <h3>Chocolat Blanc</h3>
+                <p>Opening Hours </p>
+                <p>10:00 to 14:00</p>
+
             </div>
             </div>
 
