--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,21 @@
 
 {% block content %}
 
+<style>
+header{
+    height: 75px;
+}
 
+</style>
 
 <div class="content container">
+  <header>
 
+  </header>
     <div class="jumbotron">
         <div class="container width ">
-            <h1>Chocolat Blanc</h1>
-            <h2>Number ONe chocolate shop and supplier</h2>
+{#            <h1>Chocolat Blanc</h1>#}
+            <h2>At Chocolat blanc we believe that ‘the best things in life are sweet’. We are passionate about creating luxury artisan chocolates for all occasions.</h2>
 {#            <img src="/static/images/logo.jpg">#}
             <p></p>
         </div>
