--- a/templates/base.html
+++ b/templates/base.html
@@ -58,8 +58,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">
-{#                    <img src="/static/images/sweetielogo.png" style="display: inline-block;">#}
+                <a class="navbar-brand" href="/">
+                    <img src="/static/images/finallogo.png" style="display: inline-block;">
 
                     </a>
             </div>
