--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@ header{
 
         <div class="grid">
             <figure class="effect-julia">
-                <img src="/static/images/tablet.jpg" alt="img21"/>
+                <img src="{% static 'images/tablet.jpg' %}" alt="img21"/>
                 <figcaption>
                     <h2>Handcraft Chocolates <span></span></h2>
                     <div>
@@ -41,7 +41,7 @@ header{
                 </figcaption>
             </figure>
             <figure class="effect-julia">
-                <img src="/static/images/display.jpg" alt="img21"/>
+                <img src="{% static 'images/display.jpg' %}" alt="img21"/>
                 <figcaption>
                     <h2>Events Chocolates Displays <span></span></h2>
                     <div>
@@ -54,7 +54,7 @@ header{
             </figure>
 
             <figure class="effect-julia">
-                <img src="/static/images/blogpic.jpg">
+                <img src="{% static 'images/blogpic.jpg' %}">
                 <figcaption>
                     <h2>Chocolate Recipes<span></span></h2>
                     <div>
