--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,4 @@
-{%  load static  %}
+{%  load static from staticfiles %}
 
 <!DOCTYPE html>
 <html class="full" lang="en">
@@ -28,7 +28,7 @@
 
     <style>
        body{
-            background-image: url("/static/images/front.png"); }
+            background-image: url("{% static 'images/front.png'%}"); }
     </style>
 
     <!-- Bootstrap Core JavaScript -->
@@ -59,7 +59,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="/">
-                    <img src="/static/images/finallogo.png" style="display: inline-block;">
+                    <img src="{% static 'images/finallogo.png' %}" style="display: inline-block;">
 
                     </a>
             </div>
