configured Django, Heruko and AWS

--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -1,6 +1,19 @@
 {%  extends "base.html" %}
 {% block content %}
-    <table class="table table_striped">
+
+    <style>
+
+    header{
+    height: 150px;
+}
+
+    </style>
+
+    <header>
+
+
+    </header>
+    <table class="table table_striped,">
         <thead>
             <tr>
                 <th>Image</th>
