--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{%  load static from staticfiles %}
 {% block content %}
 
 <style>
@@ -37,7 +37,7 @@ header{
                         <p>New Christmas packaging</p>
                     </div>
                     <a href="/products/">View more</a>
-{#
+
                 </figcaption>
             </figure>
             <figure class="effect-julia">
