--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
 
     <title>Chocolat Blanc</title>
     <meta name="keywords" content="hover effect, inspiration, grid, thumbnail, transition, subtle, web design" />
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,800,500,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,800,500,600' rel='stylesheet' type='text/css'>
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
