--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -23,7 +23,7 @@
                             <div class="col-md-4">
                                 <div class="thumbnail">
                                     <div class="caption">
-                                        <p><img class="stop" height="150" width="150"  src="/media/{{ product.image }}"></p>
+                                        <p><img class="stop" height="150" width="150"  src="{{MEDIA_URL }}{{ product.image }}"></p>
                                         <h4 class="pull-right">${{ product.price }}</h4>
                                         <a href="#">{{ product.name }}</a>
                                         <p>{{ product.description }}</p>
