--- a/templates/base.html
+++ b/templates/base.html
@@ -70,8 +70,9 @@
                      <li><a href={%  url 'products' %}>Products</a> </li>
                     <li><a href={%  url 'contacts' %}>Contact</a></li>
                     <li><a href="/blog/">Blog</a></li>
-                    <li><a href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+{#                    <li><a href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart</a></li>#}
                     {% if user.is_authenticated %}
+                         <li><a href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
                     <li><a href="{% url 'profile' %}">Profile</a></li>
                      <li><a href="{% url 'logout' %}">Log Out</a></li>
 
