--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,14 @@
 header{
     height: 75px;
 }
+.sevco{
+    padding: 30px;
+    margin-right: 38px;
+}
+.ally{
+    padding-top: 50px;
+    margin-left: 10px;
+}
 
 </style>
 
@@ -13,14 +21,33 @@ header{
   <header>
 
   </header>
-    <div class="jumbotron">
-        <div class="container width ">
-{#            <h1>Chocolat Blanc</h1>#}
-            <h2>At Chocolat blanc we believe that ‘the best things in life are sweet’. We are passionate about creating luxury artisan chocolates for all occasions.</h2>
-{#            <img src="/static/images/logo.jpg">#}
-            <p></p>
+
+    <div class="sevco ally">
+    <div class="col-md-8 ">
+        <div class="container fluid ">
+            <h1>THE BEST THINGS IN LIFE ARE SWEET</h1>
+            <h3>UNIQUE SCOTTISH HOMEMADE CHOCOLATE MAKER</h3>
+            <h3> STARTED IN 2012 by JOANNE</h3>
+            <h3> REAL LOCAL SUCCESS STORY</h3>
+
+        </div>
         </div>
     </div>
+    <div class="col-md-4">
+        <div class="sevco>">
+        <div class="container fluid">
+            <img src="{%static 'images/joanne.jpg' %}">
+        </div>
+        </div>
+    </div>
+{#    <div class="jumbotron">#}
+{#        <div class="container width ">#}
+{#            <h1>Chocolat Blanc</h1>#}
+{#            <h2>At Chocolat blanc we believe that ‘the best things in life are sweet’. We are passionate about creating luxury artisan chocolates for all occasions.</h2>#}
+{#            <img src="/static/images/logo.jpg">#}
+{#            <p></p>#}
+{#        </div>#}
+{#    </div>#}
 
 
 {#    <div class="content">#}
