updating front page

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,17 +29,23 @@ header{
             <h3>UNIQUE SCOTTISH HOMEMADE CHOCOLATE MAKER</h3>
             <h3> STARTED IN 2012 by JOANNE</h3>
             <h3> REAL LOCAL SUCCESS STORY</h3>
-
         </div>
-        </div>
-    </div>
-    <div class="col-md-4">
+        <div class="col-md-4">
         <div class="sevco>">
         <div class="container fluid">
             <img src="{%static 'images/joanne.jpg' %}">
         </div>
+
         </div>
+{#    </div>#}
+{#    <div class="col-md-4">#}
+{#        <div class="sevco>">#}
+{#        <div class="container fluid">#}
+{#            <img src="{%static 'images/joanne.jpg' %}">#}
+{#        </div>#}
+{#        </div>#}
     </div>
+        </div>
 {#    <div class="jumbotron">#}
 {#        <div class="container width ">#}
 {#            <h1>Chocolat Blanc</h1>#}
