--- a/blog/templates/blogposts.html
+++ b/blog/templates/blogposts.html
@@ -6,51 +6,75 @@
 
 
 
+    <style>
 
-    <div class="jumbotron">
-        <div class="container">
-            <h1>Chocolat Blanc Receipts </h1>
-{#            <img src="{% static 'images/logo.jpg' %}">#}
-            <p></p>
-        </div>
-    </div>
+        .order {
+            padding-top: 75px;
+            margin-left: 65px;
+            margin-right: 65px;
 
-    {% for post in posts %}
-        <div class="row">
-            <hr>
-            <div class="col-md-2 col-sm-3 text-center">
-                 <a class="story-img" href="#">
-                    <img src="http://placehold.it/100"
-                         style="width:100px; height: 100px; background-color: #12ABB2; color:#FFFFFF;"
-                         class="img-circle">
+        }
 
-                </a>
+        img {
+            padding: 3px;
+            border: 1px solid #021a40;
+        }
+
+    </style>
+
+    <div class="content container">
+
+        <div class="row order">
+            <div class="col-md-8 ">
+                <h1>THE BEST THINGS IN LIFE ARE SWEET</h1>
+                <h3>UNIQUE SCOTTISH HOMEMADE CHOCOLATE MAKER</h3>
+                <h3> STARTED IN 2012 by JOANNE</h3>
+                <h3> REAL LOCAL SUCCESS STORY</h3>
             </div>
-            <div class="col-md-10 col-sm-9">
+            <div class="col-md-4"><img src="/static/images/joanne.jpg">
+            </div>
+        </div>
 
-                <h3> {{ post.title }}</h3>
-                <div class="row">
-                    <div class="col-xs-9">
-                        {% if post.image %}
-                            <img src="/media/{{ post.image }}" style="width: 250px;height:250px;border-color:#CFE5ED; ">
-                        {% endif %}
-                        <p>{{ post.content | linebreaks  }}</p>
-                        <p>
-                            <button class="btn btn-default" onclick="location.href= {{post.id}}">Read More</button>
-                        </p>
-                        <p>{{ post.published_date }} | <strong>Views</strong> {{ post.views }}
-                        |<strong> Tag </strong>{{ post.tag }}</p>
 
-                        {% load disqus_tags %}
-                        {% set_disqus_title post.tile %}
-                        {% disqus_show_comments %}
+        {% for post in posts %}
+            <div class="row">
+                <hr>
+                <div class="col-md-2 col-sm-3 text-center">
+                    <a class="story-img" href="#">
+                        <img src="http://placehold.it/100"
+                             style="width:100px; height: 100px; background-color: #12ABB2; color:#FFFFFF;"
+                             class="img-circle">
 
+                    </a>
+                </div>
+                <div class="col-md-10 col-sm-9">
+
+                    <h3> {{ post.title }}</h3>
+                    <div class="row">
+                        <div class="col-xs-9">
+                            {% if post.image %}
+                                <img src="/media/{{ post.image }}"
+                                     style="width: 250px;height:250px;border-color:#CFE5ED; ">
+                            {% endif %}
+                            <p>{{ post.content | linebreaks }}</p>
+                            <p>
+                                <button class="btn btn-default" onclick="location.href= {{ post.id }}">Read More
+                                </button>
+                            </p>
+                            <p>{{ post.published_date }} | <strong>Views</strong> {{ post.views }}
+                                |<strong> Tag </strong>{{ post.tag }}</p>
+
+                            {% load disqus_tags %}
+                            {% set_disqus_title post.tile %}
+                            {% disqus_show_comments %}
+
+                        </div>
                     </div>
                 </div>
+
             </div>
 
-        </div>
 
-
-    {% endfor %}
+        {% endfor %}
+    </div>
 {% endblock %}
