--- a/blog/templates/postdetail.html
+++ b/blog/templates/postdetail.html
@@ -21,7 +21,7 @@
                     <div class="col-xs-9" >
                     <figure class="img-ranger">
                         {% if post.image %}
-                           <img src="/media/{{ post.image }}" style="width: 250px;height:250px;border-color:#CFE5ED; ">
+                           <img src="{{ MEDIA_URL }}{{ post.image }}" style="width: 250px;height:250px;border-color:#CFE5ED; ">{{ MEDIA_URL }}{{ post.image }}
                         {% endif %}
                     </figure>
                         <p>{{ post.content | linebreaks  }}</p>
