--- a/blog/templates/postdetail.html
+++ b/blog/templates/postdetail.html
@@ -2,7 +2,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-
+{%  load static from staticfiles  %}
 {#    {% for post in posts %}#}
         <div class="row">
             <hr>
