--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -39,6 +39,28 @@
                     {% endfor %}
                     {#        </tbody>#}
                 </table>
+             {% if products.has_other_pages %}
+                    <ul class="pagination">
+                        {% if products.has_previous %}
+                            <li><a href="?page={{ products.previous_page_number }}">&laquo;</a></li>
+                        {% else %}
+                            <li class="disabled"><span>&laquo;</span></li>
+                        {% endif %}
+                        {% for i in products.paginator.page_range %}
+                            {% if users.number == i %}
+                                <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                            {% else %}
+                                <li><a href="?page={{ i }}">{{ i }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                        {% if products.has_next %}
+                            <li><a href="?page={{ users.next_page_number }}">&raquo;</a></li>
+                        {% else %}
+                            <li class="disabled"><span>&raquo;</span></li>
+                        {% endif %}
+                    </ul>
+                {% endif %}
+
             </div>
         </div>
     </div>
