--- a/blog/templates/postdetail.html
+++ b/blog/templates/postdetail.html
@@ -1,46 +1,47 @@
-
 {% extends "base.html" %}
 
 {% block content %}
-{%  load static from staticfiles  %}
-{#    {% for post in posts %}#}
-        <div class="row">
-            <hr>
-            <div class="col-md-2 col-sm-3 text-center">
-                <a class="story-img" href="#">
-                    <img src="{% static 'images/mix.jpg'%}"
-                         style="width:100px; height: 100px; background-color: #12ABB2; color:#FFFFFF;"
-                         class="img-circle">
+    {% load static from staticfiles %}
 
-                </a>
-            </div>
-            <div class="col-md-10 col-sm-9">
+    <div class="row">
+        <hr>
+        <div class="col-md-2 col-sm-3 text-center">
+            <a class="story-img" href="#">
+                <img src="{% static 'images/mix.jpg' %}"
+                     style="width:100px; height: 100px; background-color: #12ABB2; color:#FFFFFF;"
+                     class="img-circle">
 
-                <h3> {{ post.title }}</h3>
-                <div class="row">
-                    <div class="col-xs-9" >
+            </a>
+        </div>
+        <div class="col-md-10 col-sm-9">
+
+            <h3> {{ post.title }}</h3>
+            <div class="row">
+                <div class="col-xs-9">
                     <figure class="img-ranger">
                         {% if post.image %}
-                           <img src="{{ MEDIA_URL }}{{ post.image }}" style="width: 250px;height:250px;border-color:#CFE5ED; ">{{ MEDIA_URL }}{{ post.image }}
+                            <img src="{{ MEDIA_URL }}{{ post.image }}"
+                                 style="width: 250px;height:250px;border-color:#CFE5ED; ">
+                            {{ MEDIA_URL }}{{ post.image }}
                         {% endif %}
                     </figure>
-                        <p>{{ post.content | linebreaks  }}</p>
-                        <p>
-                            <button class="btn btn-default" onclick="location.href='/blog'">Back To Blog</button>
-                        </p>
-                        <p>{{ post.published_date }} | <strong>Views</strong> {{ post.views }}
+                    <p>{{ post.content | linebreaks }}</p>
+                    <p>
+                        <button class="btn btn-default" onclick="location.href='/blog'">Back To Blog</button>
+                    </p>
+                    <p>{{ post.published_date }} | <strong>Views</strong> {{ post.views }}
                         |<strong> Tag </strong>{{ post.tag }}</p>
 
-                        {% load disqus_tags %}
-                        {% set_disqus_title post.tile %}
-                        {% disqus_show_comments %}
+                    {% load disqus_tags %}
+                    {% set_disqus_title post.tile %}
+                    {% disqus_show_comments %}
 
-                    </div>
                 </div>
             </div>
-
         </div>
 
+    </div>
 
-{#    {% endfor %}#}
+
+
 {% endblock %}
