--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,8 @@
-{% load static from staticfiles %}
+{%  load static from staticfiles %}
 
 <!DOCTYPE html>
 <html class="full" lang="en">
-
+<!-- Make sure the <html> tag is set to the .full CSS class. Change the background image in the full.css file. -->
 
 <head>
 
@@ -13,31 +13,29 @@
     <meta name="author" content="">
 
     <title>Chocolat Blanc</title>
-    <meta name="keywords" content="hover effect, inspiration, grid, thumbnail, transition, subtle, web design"/>
+    <meta name="keywords" content="hover effect, inspiration, grid, thumbnail, transition, subtle, web design" />
     <link href='https://fonts.googleapis.com/css?family=Raleway:400,800,500,600' rel='stylesheet' type='text/css'>
     <!-- Bootstrap Core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 
     <!-- Custom CSS -->
-
-    <link href="{% static 'css/normalize.css' %}" rel="stylesheet">
+{#     <link href="{% static 'css/the-big-picture.css' %}" rel="stylesheet">#}
+<link href="{% static 'css/normalize.css' %}" rel="stylesheet">
 
     <link href="{% static 'css/blog.css' %}" rel="stylesheet">
     <script src="{% static 'js/jquery.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
 
     <style>
-        body {
-            background-image: url("{% static 'images/front.png'%}");
-        }
+       body{
+            background-image: url("{% static 'images/front.png'%}"); }
 
-        .navfont {
-            font-size: 20px;
-        }
     </style>
 
+    <!-- Bootstrap Core JavaScript -->
 
-    {% block head_js %}{% endblock %}
+
+     {% block head_js %}{% endblock %}
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -49,14 +47,13 @@
 </head>
 
 <body>
-<div class="container-fluid" id="background">
+    <div class="container-fluid" id="background">
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -65,40 +62,54 @@
                 <a class="navbar-brand" href="/">
                     <img src="{% static 'images/finallogo.png' %}" style="display: inline-block;">
 
-                </a>
+                    </a>
             </div>
-
+            <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navfont">
-                    <li><a href="/">Home</a></li>
-                    <li><a href={% url 'products' %}>Products</a></li>
-                    <li><a href={% url 'contacts' %}>Contact</a></li>
+                <ul class="nav navbar-nav">
+                     <li><a href="/">Home</a></li>
+                     <li><a href={%  url 'products' %}>Products</a> </li>
+                    <li><a href={%  url 'contacts' %}>Contact</a></li>
                     <li><a href="/blog/">Blog</a></li>
-                    {#
+{#                    <li><a href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart</a></li>#}
                     {% if user.is_authenticated %}
-                        <li><a href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
-                        <li><a href="{% url 'profile' %}">Profile</a></li>
-                        <li><a href="{% url 'logout' %}">Log Out</a></li>
+                         <li><a href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
+                    <li><a href="{% url 'profile' %}">Profile</a></li>
+                     <li><a href="{% url 'logout' %}">Log Out</a></li>
 
-                    {% else %}
-                        <li><a href="{% url 'register' %}">Register</a></li>
-                        <li><a href="{% url 'login' %}">Log In</a></li>
+            {% else %}
+                    <li><a href="{% url 'register' %}">Register</a></li>
+                    <li><a href="{% url 'login' %}">Log In</a></li>
 
-                    {% endif %}
+            {% endif %}
+
+
 
 
                 </ul>
             </div>
-
+            <!-- /.navbar-collapse -->
         </div>
-
+        <!-- /.container -->
     </nav>
-    <div class="container">
-        {% block content %}
+        <div class="container">
+            {% block content %}
 
-        {% endblock content %}
-    </div>
+            {% endblock content %}
+        </div>
+    <!-- Page Content -->
+{#    <div class="container">#}
+{#        <div class="row">#}
+{#            <div class="col-md-6 col-sm-12">#}
+{#                <h1>The Big Picture</h1>#}
+{#                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.</p>#}
+{#            </div>#}
+{#        </div>#}
+{#        <!-- /.row -->#}
+{#    </div>#}
+    <!-- /.container -->
 
+    <!-- jQuery -->
 
 </div>
 </body>
