--- a/blog/templates/blogposts.html
+++ b/blog/templates/blogposts.html
@@ -47,7 +47,7 @@
 
                     </a>
                 </div>
-                <div class="col-md-10 col-sm-9">
+                <div class="col-md-10 col-sm-9"><!-- This adds the truncatewords of 30 characters -->
 
                     <h3> {{ post.title }}</h3>
                     <div class="row">
