--- a/blog/templates/postdetail.html
+++ b/blog/templates/postdetail.html
@@ -13,7 +13,7 @@
 
             </a>
         </div>
-        <div class="col-md-10 col-sm-9">
+        <div class="col-md-10 col-sm-9"><!-- This adds the full written blog -->
 
             <h3> {{ post.title }}</h3>
             <div class="row">
