--- a/templates/base.html
+++ b/templates/base.html
@@ -65,13 +65,13 @@
                     </a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"><!-- Nav bar changes if you are logged on -->
                 <ul class="nav navbar-nav">
                      <li><a href="/">Home</a></li>
                      <li><a href={%  url 'products' %}>Products</a> </li>
                     <li><a href={%  url 'contacts' %}>Contact</a></li>
                     <li><a href="/blog/">Blog</a></li>
-{#                    <li><a href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart</a></li>#}
+
                     {% if user.is_authenticated %}
                          <li><a href="{% url 'cart' %}"><i class="fa fa-shopping-cart"></i> Cart</a></li>
                     <li><a href="{% url 'profile' %}">Profile</a></li>
@@ -97,19 +97,7 @@
 
             {% endblock content %}
         </div>
-    <!-- Page Content -->
-{#    <div class="container">#}
-{#        <div class="row">#}
-{#            <div class="col-md-6 col-sm-12">#}
-{#                <h1>The Big Picture</h1>#}
-{#                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.</p>#}
-{#            </div>#}
-{#        </div>#}
-{#        <!-- /.row -->#}
-{#    </div>#}
-    <!-- /.container -->
 
-    <!-- jQuery -->
 
 </div>
 </body>
