--- a/blog/templates/postdetail.html
+++ b/blog/templates/postdetail.html
@@ -22,7 +22,7 @@
                         {% if post.image %}
                             <img src="{{ MEDIA_URL }}{{ post.image }}"
                                  style="width: 250px;height:250px;border-color:#CFE5ED; ">
-                            {{ MEDIA_URL }}{{ post.image }}
+{#                            {{ MEDIA_URL }}{{ post.image }}#}
                         {% endif %}
                     </figure>
                     <p>{{ post.content | linebreaks }}</p>
