--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
     margin-right: 65px;
 
 }
-img{
+.bordering{
     padding:3px; border:1px solid #021a40;
 }
 
@@ -25,7 +25,7 @@ img{
                 <h3> STARTED IN 2012 by JOANNE</h3>
                 <h3> REAL LOCAL SUCCESS STORY</h3>
             </div>
-            <div class="col-md-4"><img src="{% static 'images/joanne.jpg' %}">
+            <div class="col-md-4"><img class="bordering" src="{% static 'images/joanne.jpg' %}">
             </div>
         </div>
 
@@ -33,7 +33,7 @@ img{
 
         <div class="grid">
             <figure class="effect-julia">
-                <img src="{% static 'images/tablet.jpg' %}" alt="img21"/>
+                <img class="bordering" src="{% static 'images/tablet.jpg' %}" alt="img21"/>
                 <figcaption>
                     <h2>Handcraft Chocolates <span></span></h2>
                     <div>
@@ -46,7 +46,7 @@ img{
                 </figcaption>
             </figure>
             <figure class="effect-julia">
-                <img src="{% static 'images/display.jpg' %}" alt="img21"/>
+                <img class="bordering" src="{% static 'images/display.jpg' %}" alt="img21"/>
                 <figcaption>
                     <h2>Events Chocolates Displays <span></span></h2>
                     <div>
@@ -59,7 +59,7 @@ img{
             </figure>
 
             <figure class="effect-julia">
-                <img src="{% static 'images/blogpic.jpg' %}">
+                <img class="bordering" src="{% static 'images/blogpic.jpg' %}">
                 <figcaption>
                     <h2>Chocolate Recipes<span></span></h2>
                     <div>
