--- a/blog/templates/blogposts.html
+++ b/blog/templates/blogposts.html
@@ -9,13 +9,13 @@
     <style>
 
         .order {
-            padding-top: 75px;
+            padding-top: 125px;
             margin-left: 65px;
             margin-right: 65px;
 
         }
 
-        img {
+        .bordering {
             padding: 3px;
             border: 1px solid #021a40;
         }
@@ -31,7 +31,7 @@
                 <h3> STARTED IN 2012 by JOANNE</h3>
                 <h3> REAL LOCAL SUCCESS STORY</h3>
             </div>
-            <div class="col-md-4"><img src="{% static 'images/joanne.jpg' %}">
+            <div class="col-md-4"><img class="bordering" src="{% static 'images/joanne.jpg' %}">
             </div>
         </div>
 
