--- a/blog/templates/postdetail.html
+++ b/blog/templates/postdetail.html
@@ -3,6 +3,13 @@
 {% block content %}
     {% load static from staticfiles %}
 
+    <style>
+
+    .bordering1{
+        padding-top: 100px;
+    }
+    </style>
+
     <div class="row">
         <hr>
         <div class="col-md-2 col-sm-3 text-center">
@@ -13,7 +20,7 @@
 
             </a>
         </div>
-        <div class="col-md-10 col-sm-9"><!-- This adds the full written blog -->
+        <div class="col-md-10 col-sm-9 class= bordering1"><!-- This adds the full written blog -->
 
             <h3> {{ post.title }}</h3>
             <div class="row">
