--- a/blog/templates/postdetail.html
+++ b/blog/templates/postdetail.html
@@ -10,7 +10,7 @@
     }
     </style>
 
-    <div class="row">
+    <div class="row class= bordering1">
         <hr>
         <div class="col-md-2 col-sm-3 text-center">
             <a class="story-img" href="#">
