--- a/blog/templates/postdetail.html
+++ b/blog/templates/postdetail.html
@@ -20,7 +20,7 @@
 
             </a>
         </div>
-        <div class="col-md-10 col-sm-9 class= bordering1"><!-- This adds the full written blog -->
+        <div class="col-md-10 col-sm-9"><!-- This adds the full written blog -->
 
             <h3> {{ post.title }}</h3>
             <div class="row">
