--- a/blog/templates/blogposts.html
+++ b/blog/templates/blogposts.html
@@ -41,7 +41,7 @@
                 <hr>
                 <div class="col-md-2 col-sm-3 text-center">
                     <a class="story-img" href="#">
-                        <img src="http://placehold.it/100"
+                        <img src="{% static 'images/blogpic.jpg' %}"
                              style="width:100px; height: 100px; background-color: #12ABB2; color:#FFFFFF;"
                              class="img-circle">
 
