--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -15,7 +15,7 @@
                             <div class="col-md-4"> <!-- This adds products and the paypal logo -->
                                 <div class="thumbnail">
                                     <div class="caption">
-                                        <p><img class="stop" height="150" width="150"
+                                        <p><img class="stop grow" height="150" width="150"
                                                 src="{{ MEDIA_URL }}{{ product.image }}"></p>
                                         <h4 class="pull-right">${{ product.price }}</h4>
                                         <a href="#">{{ product.name }}</a>
