added image hoover

--- a/templates/products/products.html
+++ b/templates/products/products.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
+
+    <style>
+    .grow {
+        transition: all .2s ease-in-out;
+    }
+    .grow:hover {
+        transform: scale(2.1);
+    }
+    </style>
     <div class="row" style="margin-top: 170px">
 
 
