adding bordering contact

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,6 +20,9 @@
             margin: 0 auto;
             padding-left: 65px;
         }
+     .bordering{
+    padding:3px; border:1px solid #021a40;
+    }
 
 
     </style>
@@ -59,7 +62,7 @@
 
 
         <figure class="effect-julia">
-            <img src="{% static 'images/boxofchocos.jpg' %}" alt="img21"/>
+            <img class= bordering src="{% static 'images/boxofchocos.jpg' %}" alt="img21"/>
             <figcaption>
                 <h2>Handcraft Chocolates <span></span></h2>
                 <div>
@@ -73,7 +76,7 @@
             </figcaption>
         </figure>
         <figure class="effect-julia">
-            <img src="{% static 'images/tiers2.jpg' %}" alt="img21"/>
+            <img class= bordering src="{% static 'images/tiers2.jpg' %}" alt="img21"/>
             <figcaption>
                 <h2>Events Chocolates Displays <span></span></h2>
                 <div>
@@ -87,7 +90,7 @@
         </figure>
 
         <figure class="effect-julia">
-            <img src="{% static 'images/chocolat2.jpg' %}">
+            <img class= bordering src="{% static 'images/chocolat2.jpg' %}">
             <figcaption>
                 <h2>Chocolate Recipes<span></span></h2>
                 <div>
