--- a/templates/contact.html
+++ b/templates/contact.html
@@ -66,10 +66,10 @@
             <figcaption>
                 <h2>Handcraft Chocolates <span></span></h2>
                 <div>
-                    <p>Pick n mix</p>
-                    <p>Exciting New Favours</p>
+                    <p>Peppermint</p>
+                    <p>gi</p>
                     <p>New Christmas packaging</p>
-                    <a href="/products/">Click View more</a>
+{#                    <a href="/products/">Click View more</a>#}
                 </div>
                 <a href="/products/">View more</a>
 
@@ -83,7 +83,7 @@
                     <p>5 tier display in Gleneagles</p>
                     <p>50th party display </p>
                     <p>Christmas table</p>
-                    <a href="/products/">Click View more</a>
+{#                    <a href="/products/">Click View more</a>#}
                 </div>
                 <a href="/products/">View more</a>
             </figcaption>
@@ -97,7 +97,7 @@
                     <p>Peppermint Recipe</p>
                     <p>Best Tablet in the World</p>
                     <p>What dark chocolate to use</p>
-                    <a href="/blog/">Click View more</a>
+{#                    <a href="/blog/">Click View more</a>#}
                 </div>
                 <a href="/blog/">Click View more</a>
             </figcaption>
