--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
                 <h1>THE BEST THINGS IN LIFE ARE SWEET</h1>
                 <h3>UNIQUE SCOTTISH HOMEMADE CHOCOLATE MAKER</h3>
                 <h3> STARTED IN 2012 by JOANNE</h3>
-                <h3> REAL LOCAL SUCCESS STORY</h3>
+                <h3> A REAL LOCAL SUCCESS STORY</h3>
             </div>
             <div class="col-md-4"><img class="bordering" src="{% static 'images/joanne.jpg' %}">
             </div>
@@ -37,9 +37,9 @@
                 <figcaption>
                     <h2>Handcraft Chocolates <span></span></h2>
                     <div>
-                        <p>Pick n mix</p>
-                        <p>Exciting New Favours</p>
-                        <p>New Christmas packaging</p>
+                        <p>Unique Favours</p>
+                        <p>Beautiful Collections</p>
+                        <p>Traditional Sweets</p>
                     </div>
                     <a href="/products/">View more</a>
 
@@ -51,8 +51,8 @@
                     <h2>Events Chocolates Displays <span></span></h2>
                     <div>
                         <p>5 tier display in Gleneagles</p>
-                        <p>50th party display </p>
-                        <p>Christmas table</p>
+                        <p>Chocolate Events </p>
+                        <p>Party Bags</p>
                     </div>
                     <a href="/products/">View more</a>
                 </figcaption>
@@ -63,10 +63,10 @@
                 <figcaption>
                     <h2>Chocolate Recipes<span></span></h2>
                     <div>
-                        <p>Peppermint Recipe</p>
-                        <p>Best Tablet in the World</p>
-                        <p>What dark chocolate to use</p>
-                        <a href="/blog/">Click View more</a>
+                        <p>Dark Chocolate Recipe</p>
+                        <p>Prefect Chocolate Brownie</p>
+                        <p>Easter Eggs</p>
+{#                        <a href="/blog/">Click View more</a>#}
                     </div>
                     <a href="/blog/">Click View more</a>
                 </figcaption>
