--- a/accounts/templates/register.html
+++ b/accounts/templates/register.html
@@ -1,7 +1,14 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
 {% block content %}
-    <form role="form" method="post" action="{% url 'register' %}">
+
+     <style>
+    .buffer {
+        padding: 100px;
+    }
+    </style>
+
+    <form class = buffer role="form" method="post" action="{% url 'register' %}">
         <legend>Create a new account</legend>
         {% csrf_token %}
         {{ form| as_bootstrap }}
