--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,7 +1,15 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
 {% block content %}
-    <form role="form" method="post" action="{% url 'login' %}">
+
+    <style>
+    .buffer {
+        padding: 100px;
+    }
+    </style>
+
+
+    <form class = buffer role="form" method="post" action="{% url 'login' %}">
         <legend>Login</legend>
         {% csrf_token %}
         {{ form| as_bootstrap }}
