--- a/templates/contact.html
+++ b/templates/contact.html
@@ -44,7 +44,7 @@
                 Hamilton, South Lanarkshire.</p>
             <h4>Call us</h4>
             <p>+44 7901 598964</p>
-            <p>email @chocolatblancltd</p>
+            <p><span class="fa fa-envelope" aria-hidden="true"></span>email @chocolatblancltd</p>
         </div>
 
 
