--- a/templates/contact.html
+++ b/templates/contact.html
@@ -40,11 +40,11 @@
         <div class="container col-md-12"></div>
         <div class="col-md-6" id="now">
             <h3>Find us</h3>
-            <p>18 Haddow Street
+            <p><span class="fa fa-address-book" aria-hidden="true"></span>  18 Haddow Street
                 Hamilton, South Lanarkshire.</p>
             <h4>Call us</h4>
-            <p>+44 7901 598964</p>
-            <p><span class="fa fa-envelope" aria-hidden="true"></span>email @chocolatblancltd</p>
+            <p><span class="fa fa-phone-square" aria-hidden="true"></span>  +44 7901 598964</p>
+            <p><span class="fa fa-envelope" aria-hidden="true"></span>   @chocolatblancltd</p>
         </div>
 
 
