--- a/templates/contact.html
+++ b/templates/contact.html
@@ -51,7 +51,7 @@
         <div class="col-md-6" id="now1">
             <h3>Chocolat Blanc</h3>
             <p>Opening Hours </p>
-            <p>10:00 to 14:00</p>
+            <p><span class="fa fa-clock-o" aria-hidden="true"></span> 10:00 to 14:00</p>
 
         </div>
     </div>
