--- a/templates/contact.html
+++ b/templates/contact.html
@@ -67,9 +67,9 @@
                 <h2>Handcraft Chocolates <span></span></h2>
                 <div>
                     <p>Peppermint</p>
-                    <p>gi</p>
+                    <p>Tablet</p>
                     <p>New Christmas packaging</p>
-{#                    <a href="/products/">Click View more</a>#}
+
                 </div>
                 <a href="/products/">View more</a>
 
@@ -80,10 +80,10 @@
             <figcaption>
                 <h2>Events Chocolates Displays <span></span></h2>
                 <div>
-                    <p>5 tier display in Gleneagles</p>
-                    <p>50th party display </p>
-                    <p>Christmas table</p>
-{#                    <a href="/products/">Click View more</a>#}
+                    <p>Weddings</p>
+                    <p>Children Parties </p>
+                    <p>Hotel Functions</p>
+
                 </div>
                 <a href="/products/">View more</a>
             </figcaption>
@@ -92,12 +92,12 @@
         <figure class="effect-julia">
             <img class= bordering src="{% static 'images/chocolat2.jpg' %}">
             <figcaption>
-                <h2>Chocolate Recipes<span></span></h2>
+                <h2>Local Events<span></span></h2>
                 <div>
-                    <p>Peppermint Recipe</p>
-                    <p>Best Tablet in the World</p>
-                    <p>What dark chocolate to use</p>
-{#                    <a href="/blog/">Click View more</a>#}
+                    <p>Fun Learning</p>
+                    <p>Chocolate tasting</p>
+                    <p>Chocolate Craft days  </p>
+
                 </div>
                 <a href="/blog/">Click View more</a>
             </figcaption>
