--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -13,7 +13,7 @@
 
 
     </header>
-    <table class="table table_striped,">
+    <table class="table table_striped,"> <!-- Cart Table -->
         <thead>
         <tr>
             <th>Image</th>
