--- a/templates/contact.html
+++ b/templates/contact.html
@@ -66,8 +66,8 @@
             <figcaption>
                 <h2>Handcraft Chocolates <span></span></h2>
                 <div>
-                    <p>Peppermint</p>
-                    <p>Tablet</p>
+                    <p>Small packets</p>
+                    <p>Individualise boxes </p>
                     <p>New Christmas packaging</p>
 
                 </div>
@@ -78,7 +78,7 @@
         <figure class="effect-julia">
             <img class= bordering src="{% static 'images/tiers2.jpg' %}" alt="img21"/>
             <figcaption>
-                <h2>Events Chocolates Displays <span></span></h2>
+                <h2>Functions <span></span><</h2>
                 <div>
                     <p>Weddings</p>
                     <p>Children Parties </p>
